<?xml version="1.0"?>
<package format="2">
  <name>icp_101xx</name>
  <version>0.0.0</version>
  <description>The icp_101xx package</description>

  <maintainer email="btlopez@ucla.edu">brett</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>libserial</depend>
   <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
