<?xml version="1.0"?>
<package format="2">
  <name>icp_101xx</name>
  <version>0.0.0</version>
  <description>The icp_101xx package</description>

  <maintainer email="btlopez@ucla.edu">brett</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

</package>
